--- a/layout/styles/framework.css
+++ b/layout/styles/framework.css
@@ -108,6 +108,7 @@ body {
     background-position: top center;
     background-repeat: no-repeat;
     background-size: cover;
+    /* height: 00px; */
 }
 
 .circle {
